# multi_robot_followers

./: README.md
leader_follower/: package.xml  setup.py
leader_follower/leader_follower/: lf_control.py
turtlebot3_multi_robot/: CMakeLists.txt
turtlebot3_multi_robot/launch/: gazebo_multi_nav2_world.launch.py  lf_final.launch.py  tb3.launch.py
turtlebot3_multi_robot/maps/: my_map.pgm  my_map.yaml
turtlebot3_multi_robot/params/: nav2_params.yaml
